# template-cpp

./: CMakeLists.txt
chapter2/include/: shatckpartspec.hpp  stack1.hpp  stack2.hpp  stack3.hpp
chapter2/src/: main.cpp
chapter3/: CMakeLists.txt
chapter3/include/: stackauto.hpp  stacknontype.hpp
chapter3/src/: main.cpp
